# Work-Stealing

./: .gitignore  README.md  ws_dequeue.c  ws_dequeue.h  ws_dlist.c  ws_task.h  ws_test_task  ws_test_task.c
include/: ws_dequeue.h  ws_dlist.h  ws_task.h
src/: CMakeCache.txt  CMakeLists.txt  Makefile  Untitled-1  cmake_install.cmake  ws_dequeue.c  ws_dlist.c  ws_test_task.c
